# RustWebAPIsCourseRocket0_5

./: Cargo.toml  LICENSE  Rocket.toml
migrations/2022-05-21-183404_create_rustaceans/: down.sql  up.sql
src/: main.rs  models.rs
