[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]

[dependencies]
serde_json = "1.0"
base64 = "0.13.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel = {version = "1.4.8", features = ["sqlite","r2d2"] }
serde = {version = "1.0", features = ["derive"]}
diesel_migrations = "1.4"